@@ -7,6 +7,7 @@ In kpanel-0.17:
          in the kpanelrc
        - cosmectic problem with my pushbuttons fixed
        - small bugfix for minipanel which refused to appear sometimes...
+       - cosmetic fix for folder icons
 
     Patchlevel 6:
        - menu sorting fixed (thanks to Michael Bialas)
